--- a/frontendvite_bakery/package.json
+++ b/frontendvite_bakery/package.json
@@ -17,9 +17,12 @@
     "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.2",
     "@tailwindcss/vite": "^4.1.3",
+    "axios": "^1.8.4",
     "framer-motion": "^12.6.5",
+    "js-cookie": "^3.0.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.5.0",
     "swiper": "^11.2.6",
     "tailwindcss": "^4.1.3"
   },
