update git ignor

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,4 @@ env/
 .python-version          # pyenv
 Pipfile.lock             # generated — track only if you really want to pin
 .env
+__pycache__
